Integer.valueOf() replaces new Integer()